# Career

./: .gitignore  90-day-review-plan.md  needs.md
Projects/MCP-A2A/: .mcp.json  geekbang.csv
Projects/MCP-A2A/amap/: index.html  prompt.md  成都市历史文化景点深度介绍.md
Projects/MCP-A2A/clawAI/: main.py  pyproject.toml
Projects/MCP-A2A/currency/: main_v1.py  main_v2.py  pyproject.toml  utils.py
Projects/MCP-A2A/mcp-a2a/: main.py  mcp_server.py  pyproject.toml  run.py  (+1 more)
Projects/fastapi/: log.py  main.py  tools.py  utils.py
Projects/langSmithTest/: create_dataset.py  create_prompt.py  evalution.py  pyproject.toml  tracing.py
Projects/langchain/baseClass/: pyproject.toml  utils.py
Projects/langchain/baseClass/agent/: chain_pw.py  duck.py  pe.py  playwrihgt.py  reAct.py  selfAsk.py  tools.py  utils.py
Projects/langchain/baseClass/chain/: complex.py  graph.py  graph_compx.py  icel.py  memory.py  memory_graph.py  router.py  seq.py  utils.py
Projects/langchain/baseClass/modelIO/: main.py  output_parse.py
Projects/langchain/baseClass/prompt/: cot-sc.py  cot.py  few_shot_cot.py  new_parse.py  parse.py  prompt.py  similarity.py  tot.py  zero_shot_cot.py
Projects/langchain/baseClass/usage/: asyncio_ex.py  camel.py  chain_sql.py  chain_sql_asy.py  sql.py
Projects/langchain/findBigV/: app.py  main.py  pyproject.toml
Projects/langchain/findBigV/agents/: web_agent.py
Projects/langchain/findBigV/templates/: index.html
Projects/langchain/findBigV/tool/: general_tool.py  scraping_tool.py  search_tool.py  textgen_tool.py
Projects/langchain/flowerQA/: download.py  main.py  pyproject.toml
Projects/langchain/flowerQA/data/: 花语大全.txt
Projects/langgraphclass/: article_round1_score10.txt  article_round1_score8.txt  article_round1_score9.txt  article_round3_score10.txt  article_round3_score8.txt  chatbot.py  chatbot_tool.py  langgraph.json  multi_agent.py  prompt.py  pyproject.toml  self-reflection.py  utils.py
Projects/langgraphclass/.langgraph_api/: .langgraph_ops.pckl
Projects/python-tiny-claw/: .gitignore  AGENTS.md  Test.md  main.py  ping.go  pyproject.toml  run.sh  run_benchmark.py
Projects/python-tiny-claw/.claw/skills/git-workflow/: SKILL.md
Projects/python-tiny-claw/src/tiny_claw/: __init__.py  tracing.py
Projects/python-tiny-claw/src/tiny_claw/context/: __init__.py  compactor.py  composer.py  recovery.py  skill.py
Projects/python-tiny-claw/src/tiny_claw/engine/: __init__.py  loop.py  reminder.py  reporter.py  session.py  terminal_reporter.py
Projects/python-tiny-claw/src/tiny_claw/eval/: __init__.py  benchmark.py
Projects/python-tiny-claw/src/tiny_claw/feishu/: __init__.py  approve.py  bot.py
Projects/python-tiny-claw/src/tiny_claw/memory/: __init__.py
Projects/python-tiny-claw/src/tiny_claw/provider/: __init__.py  base.py  openai.py
Projects/python-tiny-claw/src/tiny_claw/schema/: __init__.py
Projects/python-tiny-claw/src/tiny_claw/tools/: __init__.py  base.py  registry.py  subagent.py
Projects/python-tiny-claw/src/tiny_claw/tools/builtin/: __init__.py  bash.py  edit_file.py  read_file.py  skill.py  write_file.py
Projects/python-tiny-claw/workspace/: AGENTS.md  nginx.conf  test.py
Projects/python-tiny-claw/workspace/.claw/skills/ops-troubleshoot/: SKILL.md
Projects/redis/: main.py
results/: AI 智能体协作模式.md  day1.md  day10.md  day11.md  day12-redis.md  day13.md  day14-tool.md  day15-nginx.md  day16-log.md  day17-ReAct.md  day18.md  day19.md  day2.md  day20.md  day21-Plan-and-Execute.md  day22-cot.md  day23-skill.md  day24-harness.md  day25-context-engineering.md  day26-rule.md  day27-mcp.md  day28-多智能体.md  day29-规则引擎.md  day3.md  day30-mce.md  day31-hooks.md  day32-Two-Stage ReAct.md  day33-Adaptive Reasoning.md  day4.md  day5.md  day6.md  day7.md  day8.md  day9.md  json-rpc.md  loop_enginerring.md  多模型辩论与投票机制.md  学习 MCP和 A2A.md  学习harness.md  点对点（P2P）协商模式.md  (+2 more)
(+29 files in other folders)
