[project]
name = "langgraphclass"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "graphviz>=0.21",
    "langchain>=1.3.11",
    "langchain-core>=1.4.8",
    "langchain-deepseek>=1.1.0",
    "langchain-experimental>=0.4.2",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.2.7",
    "langgraph-cli[inmem]>=0.4.30",
    "langsmith>=0.9.4",
    "matplotlib>=3.11.0",
    "pandas>=3.0.3",
    "pillow>=12.2.0",
    "pygraphviz>=2.0",
]
