[project]
name = "tiny-claw"
version = "0.1.0"
description = "Python rewrite of go-tiny-claw — AI agent with Feishu integration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-core>=0.3",
    "langchain-openai>=0.2",
    "langchain-deepseek>=0.1",
    "langgraph>=0.2",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "langsmith>=0.3",
    "openai>=2.44.0",
]

[tool.uv]
package = true

[project.scripts]
tiny-claw = "tiny_claw.main:main"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
