[project]
name = "modelio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain>=1.3.11",
    "langchain-chroma>=1.1.0",
    "langchain-core>=1.4.8",
    "langchain-deepseek>=1.1.0",
    "langchain-huggingface>=1.2.2",
    "sentence-transformers>=5.6.0",
]
