[project]
name = "modelio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "ddgs>=9.14.4",
    "duckduckgo-search>=8.1.1",
    "google-search-results>=2.4.2",
    "langchain>=1.3.11",
    "langchain-chroma>=1.1.0",
    "langchain-classic>=1.0.8",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-deepseek>=1.1.0",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.6",
    "lxml>=6.1.1",
    "mypy-extensions>=1.1.0",
    "numexpr>=2.14.1",
    "pandas>=3.0.3",
    "playwright>=1.60.0",
    "psycopg2-binary>=2.9.12",
    "sentence-transformers>=5.6.0",
    "serpapi>=1.0.2",
    "sqlalchemy>=2.0.51",
    "wikipedia>=1.4.0",
]
